# DocumentPlaceholder

./: FUNCTIONS.md  LICENSE  README.md  gui.py  main.py  pyproject.toml  template.docx  template.yaml
.github/workflows/: format.yml  release.yml  tests.yml
document_placeholder/: __init__.py  cli.py  config.py  evaluator.py  exporter.py  gui.py  highlighter.py  image_value.py  parser.py  processor.py
document_placeholder/functions/: __init__.py  date.py  image.py  logic.py  math.py  sql.py  string.py
tests/: test_config.py  test_evaluator.py  test_functions_date.py  test_functions_logic.py  test_functions_math.py  test_functions_sql.py  test_functions_string.py  test_parser.py
